[package]
name = "default-env"
version = "0.1.0"
authors = ["Nick Hynes <nhynes@nhynes.com>"]
edition = "2018"
description = "The `env!` macro but with a default value."
readme = "README.md"
repository = "https://github.com/nhynes/default-env"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = "0.15"
quote = "0.6"
proc-macro2 = "0.4"
