[package]
name = "default-env"
version = "0.1.1"
authors = ["Nick Hynes <nhynes@nhynes.com>"]
edition = "2018"
description = "The `env!` macro but with a default value."
readme = "README.md"
repository = "https://github.com/nhynes/default-env"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
quote = "0.6"
syn = "0.15"
