[package]
name = "default-env"
version = "0.2.0"
authors = ["Nick Hynes <nhynes@nhynes.com>"]
edition = "2018"
description = "The `env!` macro but with a default value."
readme = "README.md"
repository = "https://github.com/nhynes/default-env"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
